--- a/src/mxbuild/Mxbuild.csproj
+++ b/src/mxbuild/Mxbuild.csproj
@@ -40,58 +40,57 @@
     References; Source
   -->
   <ItemGroup>
-    <None Include="clean\clean.pre.props" />
-    <None Include="clean\clean.targets" />
-    <None Include="common.pre.props" />
-    <None Include="common.props" />
-    <None Include="common.targets" />
-    <None Include="debug.targets" />
-    <None Include="empty.targets" />
-    <None Include="gen\gen.pre.props" />
-    <None Include="gen\gen.targets" />
-    <None Include="id\id.git.targets" />
-    <None Include="id\id.pre.props" />
-    <None Include="id\id.proj" />
-    <None Include="id\id.props" />
-    <None Include="id\id.targets" />
-    <None Include="meta\meta.post.props" />
-    <None Include="meta\meta.pre.props" />
-    <None Include="meta\meta.props" />
-    <None Include="meta\meta.targets" />
-    <None Include="node\node.pre.props" />
-    <None Include="node\node.props" />
-    <None Include="node\node.targets" />
-    <None Include="nuget\nuget.post.props" />
-    <None Include="nuget\nuget.pre.props" />
-    <None Include="nuget\nuget.props" />
-    <None Include="nuget\nuget.targets" />
-    <None Include="nuspec.props" />
-    <None Include="pack\pack.post.props" />
-    <None Include="pack\pack.pre.props" />
-    <None Include="pack\pack.props" />
-    <None Include="pack\pack.targets" />
-    <None Include="part\part.pre.props" />
-    <None Include="part\part.props" />
-    <None Include="part\part.targets" />
-    <None Include="proxy.targets" />
-    <None Include="publish\publish.git.targets" />
-    <None Include="publish\publish.pre.props" />
-    <None Include="publish\publish.proj" />
-    <None Include="publish\publish.targets" />
-    <None Include="root.pre.props" />
-    <None Include="root.props" />
-    <None Include="root.targets" />
-    <None Include="shell\env.bat" />
-    <None Include="shell\shell.proj" />
-    <None Include="shell\vcvarsallShim.bat" />
-    <None Include="shim\shim.pre.props" />
-    <None Include="shim\shim.proj" />
-    <None Include="shim\shim.targets" />
-    <None Include="xf\xf.post.props" />
-    <None Include="xf\xf.pre.props" />
-    <None Include="xf\xf.props" />
-    <None Include="xf\xf.targets" />
-    <None Include="shell\doskey.txt" />
+    <None Include="sub\clean\clean.targets" />
+    <None Include="sub\common.pre.props" />
+    <None Include="sub\common.props" />
+    <None Include="sub\common.targets" />
+    <None Include="sub\debug.targets" />
+    <None Include="sub\empty.targets" />
+    <None Include="sub\gen\gen.pre.props" />
+    <None Include="sub\gen\gen.targets" />
+    <None Include="sub\id\id.git.targets" />
+    <None Include="sub\id\id.pre.props" />
+    <None Include="sub\id\id.proj" />
+    <None Include="sub\id\id.props" />
+    <None Include="sub\id\id.targets" />
+    <None Include="sub\meta\meta.post.props" />
+    <None Include="sub\meta\meta.pre.props" />
+    <None Include="sub\meta\meta.props" />
+    <None Include="sub\meta\meta.targets" />
+    <None Include="sub\node\node.pre.props" />
+    <None Include="sub\node\node.props" />
+    <None Include="sub\node\node.targets" />
+    <None Include="sub\nuget\nuget.post.props" />
+    <None Include="sub\nuget\nuget.pre.props" />
+    <None Include="sub\nuget\nuget.props" />
+    <None Include="sub\nuget\nuget.targets" />
+    <None Include="sub\nuspec.props" />
+    <None Include="sub\pack\pack.post.props" />
+    <None Include="sub\pack\pack.pre.props" />
+    <None Include="sub\pack\pack.props" />
+    <None Include="sub\pack\pack.targets" />
+    <None Include="sub\part\part.pre.props" />
+    <None Include="sub\part\part.props" />
+    <None Include="sub\part\part.targets" />
+    <None Include="sub\proxy.targets" />
+    <None Include="sub\publish\publish.git.targets" />
+    <None Include="sub\publish\publish.pre.props" />
+    <None Include="sub\publish\publish.proj" />
+    <None Include="sub\publish\publish.targets" />
+    <None Include="sub\root.pre.props" />
+    <None Include="sub\root.props" />
+    <None Include="sub\root.targets" />
+    <None Include="sub\shell\env.bat" />
+    <None Include="sub\shell\shell.proj" />
+    <None Include="sub\shell\vcvarsallShim.bat" />
+    <None Include="sub\shim\shim.pre.props" />
+    <None Include="sub\shim\shim.proj" />
+    <None Include="sub\shim\shim.targets" />
+    <None Include="sub\xf\xf.post.props" />
+    <None Include="sub\xf\xf.pre.props" />
+    <None Include="sub\xf\xf.props" />
+    <None Include="sub\xf\xf.targets" />
+    <None Include="sub\shell\doskey.txt" />
   </ItemGroup>
   <!--
 
