--- a/src/mxbuild.debug/Mxbuild.Debug.csproj
+++ b/src/mxbuild.debug/Mxbuild.Debug.csproj
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <MetaProjectGuid>{31928A03-4286-4294-B986-D31B43B5342F}</MetaProjectGuid>
@@ -17,13 +17,8 @@
   
     None
   -->
-  <PropertyGroup Condition=" '$(Platform)' == '[None]' " />
-  <!--
-  
-    Desktop
-  -->
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|Desktop' " />
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|Desktop' " />
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|[None]' " />
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|[None]' " />
   <!--
 
     Targets
