--- a/src/mxbuild.tasks.test/Mxbuild.Tasks.Test.csproj
+++ b/src/mxbuild.tasks.test/Mxbuild.Tasks.Test.csproj
@@ -1,7 +1,7 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
-    <MetaProjectGuid>{31928A03-4286-4294-B986-D31B43B5342F}</MetaProjectGuid>
+    <MetaProjectGuid>{657066BF-EE56-4AF3-9A8F-D57D03251392}</MetaProjectGuid>
     <OutputType>Library</OutputType>
   </PropertyGroup>
   <!--
@@ -19,21 +19,21 @@
   </ItemGroup>
   <PropertyGroup>
     <ProjectGuid>{C4C3E202-9A8A-4424-9167-514101DB2459}</ProjectGuid>
-    <Platform Condition=" '$(Platform)' == '' ">Desktop</Platform>
   </PropertyGroup>
   <!--
   
     None
   -->
-  <PropertyGroup Condition=" '$(Platform)' == '[None]' " />
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|[None]' " />
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|[None]' " />
   <!--
   
     Desktop
   -->
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|Desktop' " />
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|Desktop' " />
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|NetStandard' " />
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|NetStandard' " />
   <Import Project="$(RefDir)NUnit.props" />
-  <ItemGroup Condition="'$(MetaPlatform)'=='Desktop'">
+  <ItemGroup Condition="'$(MetaPlatform)'=='$(NetStandardLibraryPlatformId)'">
     <!--
       project references
     -->
