--- a/src/mxbuild.tasks/Mxbuild.Tasks.csproj
+++ b/src/mxbuild.tasks/Mxbuild.Tasks.csproj
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <MetaProjectGuid>{31928A03-4286-4294-B986-D31B43B5342F}</MetaProjectGuid>
@@ -24,7 +24,8 @@
   
     None
   -->
-  <PropertyGroup Condition=" '$(Platform)' == '[None]' " />
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|[None]' " />
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|[None]' " />
   <!--
   
     Nuget Pack
@@ -33,7 +34,7 @@
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|Pack' " />
   <PropertyGroup Condition=" '$(Plat)' == '$(PackPlatformId)' " />
   <ItemGroup Condition="'$(MetaPlatform)' == '$(PackPlatformId)' ">
-    <SelfReference Include="$(DesktopLibraryPlatformId)" />
+    <SelfReference Include="$(PortablePlatformId)" />
     <!--
       content
     -->
@@ -50,9 +51,9 @@
   
     Desktop
   -->
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|Desktop' " />
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|Desktop' " />
-  <ItemGroup Condition="'$(MetaPlatform)'=='Desktop'">
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|NetStandard' " />
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|NetStandard' " />
+  <ItemGroup Condition="'$(MetaPlatform)'=='$(NetStandardLibraryPlatformId)'">
     <!--
       references
     -->
