--- a/src/mxbuild.tasks/Mxbuild.Tasks.csproj
+++ b/src/mxbuild.tasks/Mxbuild.Tasks.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <MetaProjectGuid>{31928A03-4286-4294-B986-D31B43B5342F}</MetaProjectGuid>
@@ -91,7 +91,7 @@
     <Compile Include="Tasks\CreateNuspec.cs" />
     <Compile Include="Tasks\Diff.cs" />
     <Compile Include="Tasks\DumpTaskItems.cs" />
-    <Compile Include="Tasks\ExpandXmlTemplate.cs" />
+    <Compile Include="Tasks\ExpandTemplate.cs" />
     <Compile Include="Tasks\RegexMatches.cs" />
     <Compile Include="Tasks\RegexReplace.cs" />
     <Compile Include="Tasks\WriteLineToFile.cs" />
