ExpandTemplate grouping; AddAssemblyAttribute

--- a/src/mxbuild.tasks.test/Mxbuild.Tasks.Test.csproj
+++ b/src/mxbuild.tasks.test/Mxbuild.Tasks.Test.csproj
@@ -103,6 +103,9 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <None Include="groupTemplate.xml">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <Content Include="template.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
