--- a/src/mxbuild.tasks/Mxbuild.Tasks.csproj
+++ b/src/mxbuild.tasks/Mxbuild.Tasks.csproj
@@ -38,13 +38,39 @@
     <!--
       content
     -->
-    <None Include="package.nuspec">
+    <None Include="$(ExtPackDir)Package.nuspec">
       <CopyTargetName>$(NuspecName)</CopyTargetName>
       <IsMxbuildTemplate>true</IsMxbuildTemplate>
+      <Type>xml</Type>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <Link>Package.nuspec</Link>
     </None>
     <None Include="Build\tasks.props">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+  <!--
+
+    Library
+  -->
+  <ItemGroup Condition="'$(IsLibraryPlatform)'=='true'">
+    <Compile Include="$(ExtIdDir)BuildInfo.cs">
+      <DependentUpon>BuildInfo.t.cs</DependentUpon>
+      <Link>Properties\BuildInfo.cs</Link>
+    </Compile>
+    <None Include="$(ExtIdDir)BuildInfo.t.cs">
+      <IsMxbuildTemplate>true</IsMxbuildTemplate>
+      <Link>Properties\BuildInfo.t.cs</Link>
+      <CompileOutput>BuildInfo.cs</CompileOutput>
+    </None>
+    <Compile Include="$(ExtPackDir)PackageInfo.cs">
+      <DependentUpon>PackageInfo.t.cs</DependentUpon>
+      <Link>Properties\PackageInfo.cs</Link>
+    </Compile>
+    <None Include="$(ExtPackDir)PackageInfo.t.cs">
+      <IsMxbuildTemplate>true</IsMxbuildTemplate>
+      <Link>Properties\PackageInfo.t.cs</Link>
+      <CompileOutput>PackageInfo.cs</CompileOutput>
     </None>
   </ItemGroup>
   <!--
@@ -66,21 +92,6 @@
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Xml" />
     <Reference Include="mscorlib" />
-    <!--
-      properties
-    -->
-    <Compile Include="..\AssemblyVersion.cs">
-      <Link>Properties\AssemblyVersion.cs</Link>
-    </Compile>
-    <Compile Include="..\BuildInfo.cs">
-      <DependentUpon>BuildInfo.t.cs</DependentUpon>
-      <Link>Properties\BuildInfo.cs</Link>
-    </Compile>
-    <None Include="..\BuildInfo.t.cs">
-      <IsMxbuildTemplate>true</IsMxbuildTemplate>
-      <Link>Properties\BuildInfo.t.cs</Link>
-      <CompileOutput>BuildInfo.cs</CompileOutput>
-    </None>
     <!--
       sources
     -->
